# mc_test

./: README.md
get_3DstickData/: pictureGet3dStick_mediaPipe.py  saved_pose_world.npy  videoGet2dStick_mediaPipe.py
get_stickData/: .swp  CaGetDepthSensorDatapy_realsense2.py  MediaPipe.py  videoGet3dStick_mediaPipe.py  videoGet3dStick_open3d_mediaPipe.py
realsense_test/: CMakeLists.txt
realsense_test/exec/: recv_h264.cpp  recv_mjpeg.cpp  send_img.cpp  send_img_h264.cpp
realsense_test/msg/: RealsenseMsg.c  RealsenseMsg.h  RealsenseMsg.idl
tensorrt_test/: tensorrt_test.py  test.py
wlrobot_agile/: MUJOCO_LOG.TXT
wlrobot_agile/resources/robots/g1/: g1_29dof.xml  g1_29dof_dex3.xml  g1_fixed.xml  g1_skeleton.xml  scene_29dof.xml  scene_29dof_dex3.xml
wlrobot_agile/resources/robots/o1/: o1.urdf  o1.xml  o1_fixed.xml  scene_o1.xml
wlrobot_agile/resources/robots/unitree_hand/: unitree_dex3.yml  unitree_dex3_left.urdf  unitree_dex3_right.urdf
wlrobot_agile/test/: base_controller.py  config.py  g1.yaml  joint_hold_test.py  joint_move_test.py  joint_set_test.py  joint_step_change_test.py  o1.yaml  read_state_test.py  real_robot.py  robot_state_pub.py  sim_robot.py  utils.py  vel_test.py
wlrobot_agile/test1/: MUJOCO_LOG.TXT  clean_g1_collision.py  config.py  joint_move_test.py  plot_track_data.py  real_robot.py  robot_state_pub.py  sim_robot.py
wlrobot_agile/test_g1/: README.md  config.py  g1.yaml  joint_hold_test.py  joint_step_change_test.py  o1.yaml  plot_track_data.py  read_state_test.py  real_robot.py  robot_state_pub.py  vel_test.py
wlrobot_agile/test_g1/common/: command_helper.py  remote_controller.py
wlrobot_agile/test_g1/westlake_sdkpy/utils/: future.py
wlrobot_agile/tracking_data/20251203/141210/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/141352/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/141640/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/142125/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/142217/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/142233/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/142254/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/tracking_data/20251203/171151/: uniform_motion_test_joints_speed0.4_range-1_1_config.json
wlrobot_agile/westlake_sdkpy-main/: README.md
wlrobot_agile/westlake_sdkpy-main/src/: setup.py
wlrobot_agile/westlake_sdkpy/idl/: __init__.py
(+214 files in other folders)
